--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "jetsquare.png"
+  avatar           : "./jetsquare.png"
   name             : "Jet Lin"
   pronouns         : "He/Him" # example: "she/her"  
-  bio              : "Ai engineer applying for Computer Science Masters"
+  bio              : "AI engineer applying for Computer Science Masters, with a focus on AI for Science and Education"
   location         : "San Jose"
   employer         : #"Red Brick University"
   uri              : # URL
