--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/jet-lin-565952238/
+  linkedin         : jet-lin-565952238/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -79,7 +79,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : https://www.youtube.com/@jet3714/videos
+  youtube          : jet3714/videos
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
